--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="main-header">
